--- a/DetaySayfasi.xaml
+++ b/DetaySayfasi.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Katalog"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Konut - Detay">
+      Title="Konut - Detay" >
+    
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -41,57 +42,57 @@
             </Grid.RowDefinitions>
 
             <!-- KonutTipi -->
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal" >
                 <Label Style="{StaticResource labelStyle}">Konut Tipi:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@konutTipi}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding KonutTipi}"></Label>
             </StackPanel>
 
             <!-- Alan -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Alan:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@alan}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Alan}"></Label>
             </StackPanel>
 
             <!-- Fiyat -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Fiyat:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@fiyat}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Fiyat}"></Label>
             </StackPanel>
             
             <!-- bahceAlani -->
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Orientation="Horizontal">
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Orientation="Horizontal" >
                 <Label Style="{StaticResource labelStyle}">Bahçe Alanı:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@bahceAlani}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding BahceAln}"></Label>
             </StackPanel>
             
             <!-- garaj -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Garaj:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@garaj}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Garaj}"></Label>
             </StackPanel>
             
             <!-- tipi -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Tipi:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@tipi}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Tip}"></Label>
             </StackPanel>
             
             <!-- kat -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Kat:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@kat}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Kat}"></Label>
             </StackPanel>
             
             <!-- balkon -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Balkon:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@balkon}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Balkon}"></Label>
             </StackPanel>
             
             <!-- asansor -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Asansör:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@asansor}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Asansor}"></Label>
             </StackPanel>
 
         </Grid>
