--- a/ListeSayfasi.xaml
+++ b/ListeSayfasi.xaml
@@ -10,19 +10,7 @@
 
     <Grid Margin="10,0,10,10">
 
-        <Grid.Resources>
-            <!--Bu bilgiler dosyadan okunacak. Ama nasıl?-->
-            <XmlDataProvider x:Key="KonutDataSource" XPath="Konutlar">
-                <x:XData>
-                    <Konutlar xmlns="">
-                        <Konut konutTipi="Villa" alan="500" fiyat="900" bahceAlani="200" garaj="var" tipi="dublex" kat="-" balkon="-" asansor="-"/>
-                        <Konut konutTipi="Daire" alan="120" fiyat="350" bahceAlani="-" garaj="-" tipi="-" kat="4/6" balkon="var" asansor="var"/>
-                        <Konut konutTipi="Villa" alan="800" fiyat="870" bahceAlani="250" garaj="yok" tipi="triplex" kat="-" balkon="-" asansor="-"/>
-                        <Konut konutTipi="Daire" alan="700" fiyat="740" bahceAlani="-" garaj="-" tipi="-" kat="5/8" balkon="var" asansor="var"/>
-                    </Konutlar>
-                </x:XData>
-            </XmlDataProvider>
-        </Grid.Resources>
+        
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -41,11 +29,11 @@
         </Label>
 
 
-        <ListView ItemsSource="{Binding Source={StaticResource KonutDataSource}, XPath=Konut}" Name="KonutListView" Grid.Column="0" Grid.Row="2">
+        <ListView Name="KonutListView" Grid.Column="0" Grid.Row="2" Loaded="KonutListView_Loaded">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Konut Tipi" DisplayMemberBinding="{Binding XPath=@konutTipi}" />
-                    <GridViewColumn Header="Alan" DisplayMemberBinding="{Binding XPath=@alan}" />
+                    <GridViewColumn Header="Konut Tipi" DisplayMemberBinding="{Binding KonutTipi}" />
+                    <GridViewColumn Header="Alan" DisplayMemberBinding="{Binding Alan}" />
                 </GridView>
             </ListView.View>
         </ListView>
