--- a/VillaDetay.xaml
+++ b/VillaDetay.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Katalog.DetaySayfasi"
+﻿<Page x:Class="Katalog.VillaDetay"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,19 +6,18 @@
       xmlns:local="clr-namespace:Katalog"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Konut - Detay" >
-    
+      Title="VillaDetay">
 
     <Grid>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            
+
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-
 
         <Label Grid.Column="0" Style="{StaticResource headerTextStyle}">
             Detaylı Konut Bilgisi:
@@ -35,9 +34,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                
+                
                 <RowDefinition />
             </Grid.RowDefinitions>
 
@@ -58,41 +56,23 @@
                 <Label Style="{StaticResource labelStyle}">Fiyat:</Label>
                 <Label Style="{StaticResource labelStyle}" Content="{Binding Fiyat}"></Label>
             </StackPanel>
-            
+
             <!-- bahceAlani -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Orientation="Horizontal" >
                 <Label Style="{StaticResource labelStyle}">Bahçe Alanı:</Label>
                 <Label Style="{StaticResource labelStyle}" Content="{Binding BahceAln}"></Label>
             </StackPanel>
-            
+
             <!-- garaj -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Garaj:</Label>
                 <Label Style="{StaticResource labelStyle}" Content="{Binding Garaj}"></Label>
             </StackPanel>
-            
+
             <!-- tipi -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Tipi:</Label>
                 <Label Style="{StaticResource labelStyle}" Content="{Binding Tip}"></Label>
-            </StackPanel>
-            
-            <!-- kat -->
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" Orientation="Horizontal">
-                <Label Style="{StaticResource labelStyle}">Kat:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding Kat}"></Label>
-            </StackPanel>
-            
-            <!-- balkon -->
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" Orientation="Horizontal">
-                <Label Style="{StaticResource labelStyle}">Balkon:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding Balkon}"></Label>
-            </StackPanel>
-            
-            <!-- asansor -->
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Orientation="Horizontal">
-                <Label Style="{StaticResource labelStyle}">Asansör:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding Asansor}"></Label>
             </StackPanel>
 
         </Grid>
